--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primevue": "^3.44.0",
     "vue": "^3.3.13",
     "vue-head": "^2.2.0",
+    "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5"
   },
