--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-head": "^2.2.0",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-autocounter": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
