--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.48.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "date-fns": "^3.0.6",
@@ -18,6 +19,7 @@
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
+    "vue3-apexcharts": "^1.5.2",
     "vue3-autocounter": "^1.0.6"
   },
   "devDependencies": {
