--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.0.6",
     "nprogress": "^0.2.0",
     "primevue": "^3.44.0",
+    "pusher-js": "^8.4.0-rc2",
     "vue": "^3.3.13",
     "vue-head": "^2.2.0",
     "vue-multiselect": "^3.0.0-beta.3",
