--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "date-fns": "^3.0.6",
+    "moment": "^2.30.1",
     "nprogress": "^0.2.0",
     "primevue": "^3.44.0",
     "pusher-js": "^8.4.0-rc2",
